--- a/MedTheMediator.Abstractions.csproj
+++ b/MedTheMediator.Abstractions.csproj
@@ -6,7 +6,7 @@
     <Nullable>enable</Nullable>
     
     <PackageId>MedTheMediator.Abstractions</PackageId>
-    <Version>1.0.0</Version>
+    <Version>1.0.1</Version>
     <License>MIT</License>
     <Authors>Davi Francisco</Authors>
     <PackageDescription>Abstractions for MedTheMediator</PackageDescription>
@@ -20,7 +20,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include=".github\workflows\main.yml" />
+    <None Remove=".github\workflows\main.yml" />
   </ItemGroup>
 
 </Project>
